# Walmart-sales-forecasting

./: .gitignore.txt  LICENSE.txt  README.md  pyproject.toml  requirements.txt  ~$ta_part_train_test.docx
configs/: Params_set.yml
data/: Future_exog.csv  README.md
notebooks/: Model_building.ipynb  README.md  eda.ipynb
reports/: README.md  stores_best_params_rmse.csv
reports/final_model/: coefficients_scaled.parquet  coefficients_unscaled.parquet  metrics.parquet  models.parquet
scripts/: cross_validation.py  final_evaluation.py  store_categorization.py
src/Walmart_sales_forecasting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data/: load.py
src/features/: feature_processing.py  feature_validation.py
src/metrics/: compute_metrics.py
src/models/: README.md  SARIMAX_run.py  Sales_Forecasting.py  Save_model_info.py  Store_cluster.py  cv.py  walmart_forecast.py
src/utils/: utilities.py
src/viz/: store_category_plots.py  visualize_data.py
